# seren-skillforge

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  enforce-seren-polymarket-publisher.yml
archetypes/api-worker/: skill.spec.yaml
archetypes/browser-automation/: skill.spec.yaml
archetypes/guide/: skill.spec.yaml
archetypes/trader/: skill.spec.yaml
artifacts/polymarket-maker-rebate-bot/: .env.example  SKILL.md  config.example.json
artifacts/shared/: polymarket_cli.py
docs/: 20260221_SkillForge_Proposal.md
docs/architecture/: 0001_skillforge_context.md  0002_publish_workflow.md
docs/metrics/: BASELINE_AND_TARGETS.md  METRIC_DEFINITIONS.md
docs/pilots/: 20260222_pilot_report.md
docs/plans/: 20260222_SkillForge_Implementation_Plan.md
docs/testing/: ANTI_PATTERNS.md  TEST_STRATEGY.md
examples/browser-automation/: skill.spec.yaml
examples/budget-tracker/: skill.spec.yaml
examples/cash-flow-statement/: skill.spec.yaml
examples/customer-support-intake/: skill.spec.yaml
examples/ledger-signing/: HITL_TESTS.md  skill.spec.yaml
examples/minimal/: skill.spec.yaml
examples/net-worth-tracker/: skill.spec.yaml
examples/peer-to-peer-payments-exchange/: skill.spec.yaml
examples/polymarket-trader/: skill.spec.yaml
examples/recurring-transactions/: skill.spec.yaml
examples/tax-prep/: skill.spec.yaml
examples/vendor-analysis/: skill.spec.yaml
scripts/ci/: check_generated.sh  check_publishers_online.sh
skillforge/: __init__.py  __main__.py  cli.py  ir.py  models.py  parser.py  publisher_catalog.py  validator.py
(+90 files in other folders)
