[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "skillforge"
version = "0.1.0"
description = "Generator-driven toolchain for building Seren skills from SkillSpec."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.17.4,<1.0.0",
  "pydantic>=2.11.7,<3.0.0",
  "PyYAML>=6.0.2,<7.0.0",
  "jsonschema>=4.25.1,<5.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.2,<9.0.0",
  "ruff>=0.13.0,<1.0.0",
]

[project.scripts]
skillforge = "skillforge.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
